// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`s2s-initial-state-creater initialState not found: initialState not found 1`] = `
"
// @flow
type Count = number
type State = { count: Count, isLoading: boolean }

const initState = {}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type Count = number;
type State = { count: Count; isLoading: boolean; };

const initState = {};
"
`;

exports[`s2s-initial-state-creater initialize object when empty object: initialize object when empty object 1`] = `
"
// @flow
type Count = number
type State = { count: Count, isLoading: boolean }

// $FlowFixMe
const initialState: State = {}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type Count = number;
type State = { count: Count; isLoading: boolean; };

// $FlowFixMe
const initialState: State = { \\"count\\": 0, \\"isLoading\\": false };
"
`;

exports[`s2s-initial-state-creater overwirte property when property is not type match: overwirte property when property is not type match 1`] = `
"
// @flow
type Count = number
type State = { count: Count, isLoading: boolean }

// $FlowFixMe
const initialState: State = { count: 100 }

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type Count = number;
type State = { count: Count; isLoading: boolean; };

// $FlowFixMe
const initialState: State = { \\"count\\": 100, \\"isLoading\\": false };
"
`;

exports[`s2s-initial-state-creater when state = number: when state = number 1`] = `
"
// @flow
type Count = number
type State = Count

// $FlowFixMe
const initialState: State = {}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type Count = number;
type State = Count;

// $FlowFixMe
const initialState: State = 0;
"
`;

exports[`s2s-initial-state-creater when state = number[] and initlaState = []: when state = number[] and initlaState = [] 1`] = `
"
// @flow
type State = number[]

const initialState: State = [1, 2, 3]

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type State = number[];

const initialState: State = [1, 2, 3];
"
`;

exports[`s2s-initial-state-creater when state = number[]: when state = number[] 1`] = `
"
// @flow
type State = number[]

// $FlowFixMe
const initialState: State = {}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type State = number[];

// $FlowFixMe
const initialState: State = [];
"
`;

exports[`s2s-initial-state-creater when state = string and initialState = "hello": when state = string and initialState = "hello" 1`] = `
"
// @flow
type State = string

const initialState: State = 'hello'

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type State = string;

const initialState: State = 'hello';
"
`;

exports[`s2s-initial-state-creater when state = string: when state = string 1`] = `
"
// @flow
type State = string

// $FlowFixMe
const initialState: State = {}

      ↓ ↓ ↓ ↓ ↓ ↓

// @flow
type State = string;

// $FlowFixMe
const initialState: State = \\"\\";
"
`;
